--- a/src/components/CulturaEmpresarial.astro
+++ b/src/components/CulturaEmpresarial.astro
@@ -45,6 +45,7 @@
     background: #f8f8ef;
     display: flex;
     justify-content: center;
+    margin-top: -120px;
   }
 
   .culture-container {
