--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -38,6 +38,7 @@ const handleSubmit = (e: Event) => {
   padding: 80px 20px;
   background-color: #f8f8ef; /* Fondo clarito */
   color: #422222; /* Letras color principal */
+  margin-top: -100px;
 }
 
 .contact-container {
