--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@
     </p>
 
     <div class="hero-buttons">
-      <a href="https://MITIENDANUBE" class="btn-primary">Ver catálogo</a>
+      <a href="https://santuredecants.mitiendanube.com/" class="btn-primary">Ver catálogo</a>
       <a href="#educacion" class="btn-secondary">¿Qué son los decants?</a>
     </div>
   </div>
