--- a/src/components/Reseñas.astro
+++ b/src/components/Reseñas.astro
@@ -96,6 +96,7 @@ const testimonialData = [
 .testimonios-section {
   background-color: #f8f8ef;
   padding: 90px 20px;
+  margin-top: -100px;
 }
 
 /* Encabezado */
