--- a/src/components/WhatsappButton.astro
+++ b/src/components/WhatsappButton.astro
@@ -1,9 +1,9 @@
 ---
-const phone = "522223100206";
+const phone = "527331369607";
 const tooltip = "Chatea con nosotros por WhatsApp";
 
 const message = encodeURIComponent(
-  "¡Hola! 👋 Me interesa conocer más sobre los servicios de Wireless Fly para tener internet rápido y estable en mi hogar. ¿Podrían darme más información? 🚀"
+  "¡Hola! 👋 Me interesa conocer más sobre los productos de Santure para descubrir nuevos aromas. ¿Podrían darme más información? ⭐"
 );
 
 const url = `https://api.whatsapp.com/send?phone=${phone}&text=${message}`;
