--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -25,6 +25,7 @@
     background-color: #f8f8ef;
     display: flex;
     justify-content: center;
+    margin-top: -100px;
   }
 
   .about-container {
