Subiendo pagina web

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -1,4 +1,4 @@
-<section class="about-section">
+<section id="nosotros" class="about-section">
   <div class="about-container">
 
     <h2 class="about-title" style="color: #422222;">Sobre nosotros</h2>
