--- a/src/components/BlogPreview.astro
+++ b/src/components/BlogPreview.astro
@@ -18,7 +18,7 @@ const posts = [
 ];
 ---
 
-<div class="blog-wrapper">
+<div id="blogs" class="blog-wrapper">
   <section class="blog-section">
     <h2 class="blog-title">Blog & Artículos</h2>
 
