--- a/src/components/CulturaEmpresarial.astro
+++ b/src/components/CulturaEmpresarial.astro
@@ -1,4 +1,4 @@
-<section class="culture-section">
+<section id="cultura-empresarial" class="culture-section">
   <div class="culture-container">
 
     <h2 class="culture-title" style="color: #422222;">Cultura empresarial</h2>
