--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,11 +14,11 @@
     <div class="footer-col">
       <h4 class="footer-subtitle">Secciones</h4>
       <ul class="footer-list">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Catálogo</a></li>
-        <li><a href="#">Nosotros</a></li>
-        <li><a href="#">Cultura Empresarial</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="https://santuredecants.mitiendanube.com/">Catálogo</a></li>
+        <li><a href="#nosotros">Nosotros</a></li>
+        <li><a href="#cultura-empresarial">Cultura Empresarial</a></li>
+        <li><a href="#blogs">Blog</a></li>
       </ul>
     </div>
 
@@ -28,7 +28,7 @@
       <ul class="footer-list">
         <li><a href="#">Políticas de Privacidad</a></li>
         <li><a href="#">Términos y Condiciones</a></li>
-        <li><a href="#">Preguntas Frecuentes</a></li>
+        <li><a href="#preguntas-frecuentes">Preguntas Frecuentes</a></li>
       </ul>
     </div>
 
@@ -37,9 +37,9 @@
       <h4 class="footer-subtitle">Contacto</h4>
 
       <ul class="footer-list">
-        <li><a href="#">WhatsApp</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="mailto:santure@gmail.com">santure@gmail.com</a></li>
+        <li><a href="https://api.whatsapp.com/send?phone=527331369607&text=¡Hola! 👋 Me interesa conocer más sobre los productos de Santure para descubrir nuevos aromas. ¿Podrían darme más información? ⭐">WhatsApp</a></li>
+        <li><a href="https://www.instagram.com/santuredecants/?utm_source=ig_web_button_share_sheet">Instagram</a></li>
+        <li><a href="mailto:santureof@gmail.com">santure@gmail.com</a></li>
       </ul>
     </div>
   </div>
