--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -15,25 +15,27 @@
 
     <!-- LINKS DESKTOP -->
     <div class="links-desktop">
-      <a href="#">Inicio</a>
-      <a href="#">Catálogo</a>
-      <a href="#">Nosotros</a>
-      <a href="#">Cultura Empresarial</a>
-      <a href="#">Blog</a>
-      <a href="#">Contacto</a>
-      <a href="#">Políticas</a>
+      <a href="/">Inicio</a>
+      <a href="https://santuredecants.mitiendanube.com/">Catálogo</a>
+      <a href="#nosotros">Nosotros</a>
+      <a href="#cultura-empresarial">Cultura Empresarial</a>
+      <a href="#blogs">Blog</a>
+      <!-- <a href="#politicas">Políticas</a> -->
+       <a href="#educacion-olfativa">Educación olfativa</a>
+       <a href="#contacto">Contacto</a>
     </div>
   </div>
 
   <!-- MENÚ MÓVIL -->
   <div id="mobile-menu" class="mobile-menu">
-    <a href="#">Inicio</a>
-    <a href="#">Catálogo</a>
-    <a href="#">Nosotros</a>
-    <a href="#">Cultura Empresarial</a>
-    <a href="#">Blog</a>
-    <a href="#">Contacto</a>
-    <a href="#">Políticas</a>
+    <a href="/">Inicio</a>
+    <a href="https://santuredecants.mitiendanube.com/">Catálogo</a>
+    <a href="#nosotros">Nosotros</a>
+    <a href="#cultura-empresarial">Cultura Empresarial</a>
+    <a href="#blogs">Blog</a>
+    <!-- <a href="#politicas">Políticas</a> -->
+     <a href="##educacion-olfativa">Educación olfativa</a>
+     <a href="#contacto">Contacto</a>
   </div>
 </nav>
 
