Subiendo pagina web

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,7 @@ import Footer from '../components/Footer.astro';
 import Gallery from '../components/Gallery.astro';
 import Form from '../components/Form.astro';
 import WhatsappButton from '../components/WhatsappButton.astro';
+import InstagramPopup from '../components/InstagramPopup.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -48,5 +49,6 @@ import WhatsappButton from '../components/WhatsappButton.astro';
 	<Form />
 	<Footer />
 	<WhatsappButton />
+	<InstagramPopup />
 </body>
 </html>
