--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -19,9 +19,10 @@
       <a href="https://santuredecants.mitiendanube.com/">Catálogo</a>
       <a href="#nosotros">Nosotros</a>
       <a href="#cultura-empresarial">Cultura Empresarial</a>
-      <a href="#blogs">Blog</a>
       <!-- <a href="#politicas">Políticas</a> -->
        <a href="#educacion-olfativa">Educación olfativa</a>
+       <a href="#test">Test</a>
+       <a href="#blogs">Blog</a>
        <a href="#contacto">Contacto</a>
     </div>
   </div>
@@ -32,9 +33,10 @@
     <a href="https://santuredecants.mitiendanube.com/">Catálogo</a>
     <a href="#nosotros">Nosotros</a>
     <a href="#cultura-empresarial">Cultura Empresarial</a>
-    <a href="#blogs">Blog</a>
     <!-- <a href="#politicas">Políticas</a> -->
-     <a href="##educacion-olfativa">Educación olfativa</a>
+     <a href="#educacion-olfativa">Educación olfativa</a>
+     <a href="#test">Test</a>
+      <a href="#blogs">Blog</a>
      <a href="#contacto">Contacto</a>
   </div>
 </nav>
