--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import EducacionOlfativa from '../components/EducacionOlfativa.astro';
 import Footer from '../components/Footer.astro';
 
 import Gallery from '../components/Gallery.astro';
+import PerfumeTest from '../components/PerfumeTest.astro';
 import Form from '../components/Form.astro';
 import WhatsappButton from '../components/WhatsappButton.astro';
 import InstagramPopup from '../components/InstagramPopup.astro';
@@ -43,9 +44,10 @@ import InstagramPopup from '../components/InstagramPopup.astro';
 	<AboutUs />
 	<CulturaEmpresarial />
 	<Reseñas />
+	<EducacionOlfativa />
+	<PerfumeTest />
 	<FAQ />
 	<BlogPreview />
-	<EducacionOlfativa />
 	<Form />
 	<Footer />
 	<WhatsappButton />
