--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@
     <div class="footer-col">
       <h4 class="footer-subtitle">Legal</h4>
       <ul class="footer-list">
-        <li><a href="#">Políticas de Privacidad</a></li>
+        <li><a href="/PoliticasEnvios">Políticas de Envio</a></li>
         <li><a href="#">Términos y Condiciones</a></li>
         <li><a href="#preguntas-frecuentes">Preguntas Frecuentes</a></li>
       </ul>
