--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -17,13 +17,13 @@
     <div class="links-desktop">
       <a href="/">Inicio</a>
       <a href="https://santuredecants.mitiendanube.com/">Catálogo</a>
-      <a href="#nosotros">Nosotros</a>
-      <a href="#cultura-empresarial">Cultura Empresarial</a>
+      <a href="/#nosotros">Nosotros</a>
+      <a href="/#cultura-empresarial">Cultura Empresarial</a>
       <!-- <a href="#politicas">Políticas</a> -->
-       <a href="#educacion-olfativa">Educación olfativa</a>
-       <a href="#test">Test</a>
-       <a href="#blogs">Blog</a>
-       <a href="#contacto">Contacto</a>
+       <a href="/#educacion-olfativa">Educación olfativa</a>
+       <a href="/#test">Test</a>
+       <a href="/#blogs">Blog</a>
+       <a href="/#contacto">Contacto</a>
     </div>
   </div>
 
@@ -31,13 +31,13 @@
   <div id="mobile-menu" class="mobile-menu">
     <a href="/">Inicio</a>
     <a href="https://santuredecants.mitiendanube.com/">Catálogo</a>
-    <a href="#nosotros">Nosotros</a>
-    <a href="#cultura-empresarial">Cultura Empresarial</a>
+    <a href="/#nosotros">Nosotros</a>
+    <a href="/#cultura-empresarial">Cultura Empresarial</a>
     <!-- <a href="#politicas">Políticas</a> -->
-     <a href="#educacion-olfativa">Educación olfativa</a>
-     <a href="#test">Test</a>
-      <a href="#blogs">Blog</a>
-     <a href="#contacto">Contacto</a>
+     <a href="/#educacion-olfativa">Educación olfativa</a>
+     <a href="/#test">Test</a>
+      <a href="/#blogs">Blog</a>
+     <a href="/#contacto">Contacto</a>
   </div>
 </nav>
 
