--- a/src/pages/blogs/BlogDecants.astro
+++ b/src/pages/blogs/BlogDecants.astro
@@ -52,7 +52,7 @@ import InstagramPopup from '../../components/InstagramPopup.astro';
         </p>
       </div>
       <div class="image">
-        <img src="https://images.unsplash.com/photo-1615634260167-c8cdede054de" alt="Perfume de lujo" />
+        <img src="/decants1.jpg" alt="Perfume de lujo" />
       </div>
     </div>
 
@@ -71,7 +71,7 @@ import InstagramPopup from '../../components/InstagramPopup.astro';
         </p>
       </div>
       <div class="image">
-        <img src="https://images.unsplash.com/photo-1592945403244-b3fbafd7f539" alt="Aplicando perfume" />
+        <img src="/decants3.jpeg" alt="Aplicando perfume" />
       </div>
     </div>
 
@@ -89,7 +89,7 @@ import InstagramPopup from '../../components/InstagramPopup.astro';
         </p>
       </div>
       <div class="image">
-        <img src="https://images.unsplash.com/photo-1594035910387-fea47794261f" alt="Colección de perfumes" />
+        <img src="/decants2.jpg" alt="Colección de perfumes" />
       </div>
     </div>
 
@@ -106,7 +106,7 @@ import InstagramPopup from '../../components/InstagramPopup.astro';
         </p>
       </div>
       <div class="image">
-        <img src="https://images.unsplash.com/photo-1520975916090-3105956dac38" alt="Joven usando perfume" />
+        <img src="/decants4.jpg" alt="Joven usando perfume" />
       </div>
     </div>
 
@@ -151,6 +151,7 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
+  margin-top: 80px;
 }
 
 .hero-overlay {
@@ -163,6 +164,7 @@ body {
   text-align: center;
   padding: 20px;
   color: white;
+  height: 59.5vh;
 }
 
 .hero h1 {
@@ -189,6 +191,7 @@ body {
   padding: 70px;
   border-radius: 25px;
   box-shadow: 0 15px 40px rgba(0,0,0,0.05);
+  margin-top: -50px;
 }
 
 .intro {
