--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,7 +28,7 @@
       <ul class="footer-list">
         <li><a href="/PoliticasEnvios">Políticas de Envio</a></li>
         <li><a href="#">Términos y Condiciones</a></li>
-        <li><a href="#preguntas-frecuentes">Preguntas Frecuentes</a></li>
+        <li><a href="/#preguntas-frecuentes">Preguntas Frecuentes</a></li>
       </ul>
     </div>
 
@@ -37,7 +37,7 @@
       <h4 class="footer-subtitle">Contacto</h4>
 
       <ul class="footer-list">
-        <li><a href="https://api.whatsapp.com/send?phone=527331369607&text=¡Hola! 👋 Me interesa conocer más sobre los productos de Santure para descubrir nuevos aromas. ¿Podrían darme más información? ⭐">WhatsApp</a></li>
+        <li><a href="https://api.whatsapp.com/send?phone=527331158588&text=¡Hola! 👋 Me interesa conocer más sobre los productos de Santure para descubrir nuevos aromas. ¿Podrían darme más información? ⭐">WhatsApp</a></li>
         <li><a href="https://www.instagram.com/santuredecants/?utm_source=ig_web_button_share_sheet">Instagram</a></li>
         <li><a href="mailto:santureof@gmail.com">santure@gmail.com</a></li>
       </ul>
