--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,14 @@ import InstagramPopup from '../components/InstagramPopup.astro';
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Santure | Inicio</title>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L7WLLKQC3D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L7WLLKQC3D');
+</script>
 <style>
 	* {
 		padding: 0;
